chore!: refactor metadata structure and update changelog entries across various documents

--- a/docs/11-candidatura/docest/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/docest/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -1,50 +1,45 @@
 title: Dichiarazione degli impegni
 changelog:
-  - version: "1.0.0"
-    date: "2025-11-05"
-    authors:
-      - Valerio Solito
-      - Alessandro Contarini
-    verifier: Alessandro Mazzariol
-    description: >
-      Prima versione stabile 
-  - version: "0.4.0"
-    date: "2025-11-05"
-    authors:
-      - Matteo Mantoan
-    verifier: Francesco Marcon
-    description: >
-      Riorganizzazione documento, ritocco tabella ore ruolo-persona
-  - version: "0.3.0"
-    date: "2025-11-05"
-    authors:
-      - Valerio Solito
-      - Alessandro Contarini
-    verifier: Leonardo Preo
-    description: >
-      Definizione dei ruoli, preventivo finale e data consegna
-  - version: "0.2.0"
-    date: "2025-11-05"
-    authors:
-      - Valerio Solito
-      - Alessandro Contarini
-    verifier: Mario De Pasquale
-    description: >
-      Distribuzione ore di ciascun componente del team per ciascun ruolo
-  - version: "0.1.0"
-    date: "2025-11-05"
-    authors:
-      - Valerio Solito
-      - Alessandro Contarini
-    verifier: Leonardo Preo
-    description: >
-      Scelta capitolato e preventivo costi per ruolo
-  - version: "0.0.1"
-    date: "2025-11-05"
-    authors:
-      - Valerio Solito
-      - Alessandro Contarini
-    verifier: Matteo Mantoan
-    description: >
-      Prima bozza del documento
-
+- version: 1.0.0
+  date: '2025-11-05'
+  approver: Matteo Mantoan
+  baseline: Candidatura
+- version: 0.4.0
+  date: '2025-11-05'
+  authors:
+  - Matteo Mantoan
+  verifier: Francesco Marcon
+  description: |
+    Riorganizzazione documento, ritocco tabella ore ruolo-persona
+- version: 0.3.0
+  date: '2025-11-05'
+  authors:
+  - Valerio Solito
+  - Alessandro Contarini
+  verifier: Leonardo Preo
+  description: |
+    Definizione dei ruoli, preventivo finale e data consegna
+- version: 0.2.0
+  date: '2025-11-05'
+  authors:
+  - Valerio Solito
+  - Alessandro Contarini
+  verifier: Mario De Pasquale
+  description: |
+    Distribuzione ore di ciascun componente del team per ciascun ruolo
+- version: 0.1.0
+  date: '2025-11-05'
+  authors:
+  - Valerio Solito
+  - Alessandro Contarini
+  verifier: Leonardo Preo
+  description: |
+    Scelta capitolato e preventivo costi per ruolo
+- version: 0.0.1
+  date: '2025-11-05'
+  authors:
+  - Valerio Solito
+  - Alessandro Contarini
+  verifier: Matteo Mantoan
+  description: |
+    Prima bozza del documento
