--- a/docs/12-rtb/verbint/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
@@ -1,16 +1,13 @@
 title: Verbale Interno 2025-11-14
 changelog:
-  - version: "1.0.0"
-    date: "2025-11-19"
-    authors:
-      - Leonardo Preo
-    verifier: "Alessandro Mazzariol"
-    description: >
-      Versione stabile verbale
-  - version: "0.0.1"
-    date: "2025-11-14"
-    authors:
-      - Leonardo Preo
-    verifier: Alessandro Mazzariol
-    description: >
-      Prima stesura verbale
+- version: 1.0.0
+  date: '2025-11-19'
+  approver: Alessandro Contarini
+  baseline: RTB
+- version: 0.0.1
+  date: '2025-11-14'
+  authors:
+  - Leonardo Preo
+  verifier: Alessandro Mazzariol
+  description: |
+    Prima stesura verbale
