--- a/docs/11-candidatura/docest/analisi_capitolati/analisi_capitolati.meta.yaml
+++ b/docs/11-candidatura/docest/analisi_capitolati/analisi_capitolati.meta.yaml
@@ -1,30 +1,26 @@
 title: Analisi dei capitolati
 changelog:
-  - version: "1.0.1"
-    date: "2025-10-31"
-    authors:
-      - Alessandro Mazzariol
-    verifier: Francesco Marcon
-    description: >
-        Aggiunti link al sito nei capitolati C5 e C7
-  - version: "1.0.0"
-    date: "2025-10-27"
-    authors:
-      - Francesco Marcon
-    verifier: Leonardo Preo
-    description: >
-      Versione stabile
-  - version: "0.1.0"
-    date: "2025-10-27"
-    authors:
-      - Francesco Marcon
-    verifier: Matteo Mantoan
-    description: >
-      Stesura del documento
-  - version: "0.0.1"
-    date: "2025-10-27"
-    authors:
-      - Francesco Marcon
-    verifier: Leonardo Preo
-    description: >
-      Prima bozza Analisi dei Capitolati
+- version: 1.0.1
+  date: '2025-10-31'
+  authors:
+  - Alessandro Mazzariol
+  verifier: Francesco Marcon
+  description: |
+    Aggiunti link al sito nei capitolati C5 e C7
+- version: 1.0.0
+  date: '2025-10-27'
+  approver: Matteo Mantoan
+  baseline: Candidatura
+- version: 0.1.0
+  date: '2025-10-27'
+  authors:
+  - Francesco Marcon
+  verifier: Matteo Mantoan
+  description: |
+    Stesura del documento
+- version: 0.0.1
+  date: '2025-10-27'
+  authors:
+  - Francesco Marcon
+  verifier: Leonardo Preo
+  description: Prima bozza Analisi dei Capitolati
