--- a/docs/11-candidatura/verbest/verbest_2025-10-24_m31/verbest_2025-10-24_m31.meta.yaml
+++ b/docs/11-candidatura/verbest/verbest_2025-10-24_m31/verbest_2025-10-24_m31.meta.yaml
@@ -1,16 +1,13 @@
 title: Verbale Esterno 2025-10-24 (M31)
 changelog:
-  - version: "1.0.0"
-    date: "2025-10-25"
-    authors:
-      - Francesco Marcon
-    verifier: Matteo Mantoan
-    description: >
-      Versione stabile verbale
-  - version: "0.0.1"
-    date: "2025-10-25"
-    authors:
-      - Francesco Marcon
-    verifier: Matteo Mantoan
-    description: >
-      Prima versione del Verbale Esterno post incontro con l'azienda proponente M31
+- version: 1.0.0
+  date: '2025-10-25'
+  approver: Matteo Mantoan
+  baseline: Candidatura
+- version: 0.0.1
+  date: '2025-10-25'
+  authors:
+  - Francesco Marcon
+  verifier: Matteo Mantoan
+  description: Prima versione del Verbale Esterno post incontro con l'azienda proponente
+    M31
