--- a/docs/11-candidatura/verbint/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/verbint/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
@@ -1,24 +1,21 @@
 title: Verbale Interno 2025-10-25
 changelog:
-  - version: "1.0.1"
-    date: "2025-11-05"
-    authors:
-      - Mario De Pasquale
-      - Francesco Marcon
-    verifier: "Leonardo Preo"
-    description: >
-      Divisione in punti: discussione, decisioni, azioni
-  - version: "1.0.0"
-    date: "2025-10-26"
-    authors:
-      - Alessandro Mazzariol
-    verifier: Mario De Pasquale
-    description: >
-      Versione stabile verbale
-  - version: "0.0.1"
-    date: "2025-10-26"
-    authors:
-      - Alessandro Mazzariol
-    verifier: Mario De Pasquale
-    description: >
-      Prima bozza del verbale
+- version: 1.0.1
+  date: '2025-11-05'
+  authors:
+  - Mario De Pasquale
+  - Francesco Marcon
+  verifier: Leonardo Preo
+  description: |
+    Divisione in punti: discussione, decisioni, azioni
+- version: 1.0.0
+  date: '2025-10-26'
+  approver: Matteo Mantoan
+  baseline: Candidatura
+- version: 0.0.1
+  date: '2025-10-26'
+  authors:
+  - Alessandro Mazzariol
+  verifier: Mario De Pasquale
+  description: |
+    Prima bozza del verbale
