--- a/docs/12-rtb/docest/glossario/glossario.meta.yaml
+++ b/docs/12-rtb/docest/glossario/glossario.meta.yaml
@@ -1,46 +1,42 @@
 title: Glossario
 changelog:
-  - version: "1.2.0"
-    date: "2025-12-22"
-    authors:
-      - Alessandro Mazzariol
-    verifier: Alessandro Contarini
-    description: >
-      Aggiunta Termini specifici dello sprint 2
-  - version: "1.1.0"
-    date: "2025-11-22"
-    authors:
-      - Francesco Marcon
-    verifier: Leonardo Preo
-    description: >
-      Termini post aggiornamento versionamento e struttura repo
-  - version: "1.0.0"
-    date: "2025-11-07"
-    authors:
-      - Francesco Marcon
-      - Matteo Mantoan
-    verifier: Leonardo Preo
-    description: >
-      Prima versione stabile
-  - version: "0.2.0"
-    date: "2025-10-31"
-    authors:
-      - Francesco Marcon
-    verifier: Matteo Mantoan
-    description: >
-        Cambiamento ordinamento termini e tolti indici numerici
-  - version: "0.1.0"
-    date: "2025-10-31"
-    authors:
-      - Francesco Marcon
-    verifier: Matteo Mantoan
-    description: >
-        Aggiunta nuovi termini
-  - version: "0.0.1"
-    date: "2025-10-30"
-    authors:
-      - Francesco Marcon
-      - Matteo Mantoan
-    verifier: Leonardo Preo
-    description: >
-        Prima bozza, implementazione di automatismi e primi termini
+- version: 1.2.0
+  date: '2025-12-22'
+  authors:
+  - Alessandro Mazzariol
+  verifier: Alessandro Contarini
+  description: |
+    Aggiunta Termini specifici dello sprint 2
+- version: 1.1.0
+  date: '2025-11-22'
+  authors:
+  - Francesco Marcon
+  verifier: Leonardo Preo
+  description: |
+    Termini post aggiornamento versionamento e struttura repo
+- version: 1.0.0
+  date: '2025-11-07'
+  approver: Matteo Mantoan
+  baseline: Candidatura
+- version: 0.2.0
+  date: '2025-10-31'
+  authors:
+  - Francesco Marcon
+  verifier: Matteo Mantoan
+  description: |
+    Cambiamento ordinamento termini e tolti indici numerici
+- version: 0.1.0
+  date: '2025-10-31'
+  authors:
+  - Francesco Marcon
+  verifier: Matteo Mantoan
+  description: |
+    Aggiunta nuovi termini
+- version: 0.0.1
+  date: '2025-10-30'
+  authors:
+  - Francesco Marcon
+  - Matteo Mantoan
+  verifier: Leonardo Preo
+  description: |
+    Prima bozza, implementazione di automatismi e primi termini
