--- a/docs/12-rtb/slides/ddb_2025-11-17/ddb_2025-11-17.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2025-11-17/ddb_2025-11-17.meta.yaml
@@ -1,25 +1,20 @@
 title: Diario di Bordo 2025-11-17
 changelog:
-  - version: "1.0.0"
-    date: "2025-11-16"
-    authors:
-      - Alessandro Contarini
-    verifier: Francesco Marcon
-    description: >
-      Prima versione stabile
-
-  - version: "0.1.0"
-    date: "2025-11-15"
-    authors:
-      - Alessandro Contarini
-    verifier: TBD
-    description: >
-      Redazione contenuto
-
-  - version: "0.0.1"
-    date: "2025-11-15"
-    authors:
-      - Alessandro Contarini
-    verifier: TBD
-    description: >
-      Creazione del diario di Bordo
+- version: 1.0.0
+  date: '2025-11-16'
+  approver: Alessandro Contarini
+  baseline: RTB
+- version: 0.1.0
+  date: '2025-11-15'
+  authors:
+  - Alessandro Contarini
+  verifier: TBD
+  description: |
+    Redazione contenuto
+- version: 0.0.1
+  date: '2025-11-15'
+  authors:
+  - Alessandro Contarini
+  verifier: TBD
+  description: |
+    Creazione del diario di Bordo
