--- a/docs/12-rtb/verbest/verbest_2025-11-28/verbest_2025-11-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-11-28/verbest_2025-11-28.meta.yaml
@@ -1,23 +1,19 @@
 title: Verbale Esterno 2025-11-28 (M31)
 changelog:
-  - version: "1.0.1"
-    date: "2025-12-02"
-    authors:
-      - Francesco Marcon
-    verifier: Valerio Solito
-    description: >
-      Versione stabile
-  - version: "1.0.0"
-    date: "2025-12-01"
-    authors:
-      - Francesco Marcon
-    verifier: Leonardo Preo
-    description: > 
-      Correzioni minori e aggiunta actions 
-  - version: "0.0.1"
-    date: "2025-11-28"
-    authors:
-      - Francesco Marcon
-    verifier: Matteo Mantoan
-    description: >
-      Prima bozza del verbale 
+- version: 1.0.1
+  date: '2025-12-02'
+  authors:
+  - Francesco Marcon
+  verifier: Valerio Solito
+  description: |
+    Versione stabile
+- version: 1.0.0
+  date: '2025-12-01'
+  approver: Alessandro Mazzariol
+  baseline: RTB
+- version: 0.0.1
+  date: '2025-11-28'
+  authors:
+  - Francesco Marcon
+  verifier: Matteo Mantoan
+  description: "Prima bozza del verbale \n"
