--- a/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-12-17/verbest_2025-12-17.meta.yaml
@@ -1,16 +1,13 @@
 title: Verbale Esterno 2025-12-17 (M31)
 changelog:
-  - version: "1.0.0"
-    date: "2025-12-19"
-    authors:
-      - Francesco Marcon
-    verifier: Alessandro Mazzariol
-    description: >
-      Modifiche minori ed approvazione aziendale
-  - version: "0.0.1"
-    date: "2025-12-17"
-    authors:
-      - Francesco Marcon
-    verifier: Alessandro Mazzariol
-    description: >
-      Prima bozza del verbale
+- version: 1.0.0
+  date: '2025-12-19'
+  approver: Francesco Marcon
+  baseline: RTB
+- version: 0.0.1
+  date: '2025-12-17'
+  authors:
+  - Francesco Marcon
+  verifier: Alessandro Mazzariol
+  description: |
+    Prima bozza del verbale
