Sistemate tabelle ore

--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Progetto
 changelog:
+  - version: "0.5.1"
+    date: "2026-02-09"
+    authors:
+      - Alessandro Mazzariol
+    verifier: TBD
+    description: >
+      Sistemate tabelle ore
   - version: "0.5.0"
     date: "2026-02-04"
     authors:
