--- a/.github/workflows/gulpase-report.yml
+++ b/.github/workflows/gulpase-report.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      # - setup-gulpase-action
   workflow_dispatch:
 
 jobs:
@@ -15,13 +14,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup enviroment
+      - name: Setup environment
         uses: ./.github/actions/setup-docs-env
 
       - name: Build all baseline docs
         run: notipdo build baseline
       
-      - name: Calulate Gulpease index
-        run: notipdo metrics gulpease
-      
-      # Add the actual update of the values in Jira
+      - name: Calculate Gulpease index and Send to Jira
+        # Passiamo i secret come variabili d'ambiente
+        env:
+          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+          JIRA_DOMAIN: ${{ secrets.JIRA_DOMAIN }}
+          JIRA_EMAIL: ${{ secrets.JIRA_EMAIL }}
+          JIRA_ISSUE_KEY: ${{ secrets.JIRA_ISSUE_KEY }}
+          JIRA_CUSTOM_FIELD_ID: ${{ secrets.JIRA_CUSTOM_FIELD_ID }}
+        run: notipdo metrics gulpease --jira
