doc-norme-progetto-v0.15.2 - Formattazione e aggiunta termini

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -95,7 +95,7 @@ accepted_words:
   - WebSocket
   - ESLint
   - Golang
-
+  - gitignore
 
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
