--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -69,6 +69,7 @@ accepted_words:
   - LaTeX
   - MQTT
   - NATS
+  - Golang
   - PDF
   - pdf
   - Typst
@@ -217,3 +218,4 @@ accepted_words:
   - l'endpoint
   - failover
   - provisionato
+  - d'esami
