--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -1,5 +1,9 @@
 title: Piano di Progetto
 changelog:
+  - version: 1.0.0
+    date: "2026-02-17"
+    approver: Alessandro Contarini
+    baseline: RTB
   - version: "0.6.0"
     date: "2026-02-11"
     authors:
