docs(piano_progetto): Modifiche sezioni precedenti e aggiunta Sprint 6 NT-313 (#112)
* docs(piano_progetto) Sistemate errori nelle parti precedenti e aggiunto Sprint 6

* spellcheck e formatting

* Cambiato il verificatore

* fix(piano_progetto): Aggiunte modifiche NT-313

* fix(piano_progetto): sistemato metadata NT-313

* fix(piano_progetto): sistemato metadata NT-313

* fix spelling e riscrittura frasi ambigue

* fix formatting

* Sistemate tabelle ore

* docs(piano_progetto): aggiunta ore e fine sprint 6

* style(piano_progetto): spell fix e formattazione

* inizio validazione PdP

* fix PdP

* fix errore ortografico

* fix

* fix sprint 6

* style(piano_progetto): formatting

* fix errore ortografico sprint 6

* style(piano_progetto): formatting

* docs(piano_progetto): riscrittura frasi

* style(norme_progetto): formatting

* Piano di qualifica

---------

Co-authored-by: Alessandro Mazzariol <107548899+Scafu@users.noreply.github.com>
Co-authored-by: Scafu <alessandro.mazzariol04@gmail.com>
Co-authored-by: pr3o <158464877+pr3o@users.noreply.github.com>
Co-authored-by: Alessandro Contarini <alessandro.contarini21@gmail.com>

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -69,6 +69,7 @@ accepted_words:
   - LaTeX
   - MQTT
   - NATS
+  - Golang
   - PDF
   - pdf
   - Typst
@@ -120,7 +121,7 @@ accepted_words:
   - KLOC
   - MVP
   - PDCA
-  - PDP
+  - PdP
   - PoC
   - PV
   - repo
@@ -135,10 +136,13 @@ accepted_words:
   - auth
   - Burndown
   - MVP
+  - AdR
+  - NdP
   - TOTP
   - Postcondizioni
   - Precondizioni
   - namespace
+  - PdQ
   - Serverless
   - WebApp
 
@@ -214,3 +218,4 @@ accepted_words:
   - l'endpoint
   - failover
   - provisionato
+  - d'esami
