--- a/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
+++ b/docs/12-rtb/docest/piano_progetto/piano_progetto.meta.yaml
@@ -1,47 +1,70 @@
 title: Piano di Progetto
 changelog:
+  - version: 1.0.0
+    date: "2026-02-17"
+    approver: Alessandro Contarini
+    baseline: RTB
+  - version: "0.6.0"
+    date: "2026-02-11"
+    authors:
+      - Leonardo Preo
+    verifier: Alessandro Contarini
+    description: >
+      Completamento ed inserimento ore Sprint 6
+  - version: "0.5.1"
+    date: "2026-02-09"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Alessandro Contarini
+    description: >
+      Sistemate tabelle ore
+  - version: "0.5.0"
+    date: "2026-02-04"
+    authors:
+      - Valerio Solito
+    verifier: Alessandro Mazzariol
+    description: >
+      Sistemate sezioni precedenti e aggiunta sezione Sprint 6
   - version: "0.4.0"
     date: "2026-02-03"
     authors:
       - Valerio Solito
     verifier: Leonardo Preo
     description: >
-        Sistemate sezioni Sprint precedenti e aggiunta sezione Sprint 5
+      Sistemate sezioni Sprint precedenti e aggiunta sezione Sprint 5
   - version: "0.3.0"
     date: "2025-12-16"
     authors:
       - Alessandro Mazzariol
     verifier: Alessandro Contarini
     description: >
-        Aggiornata sezione Sprint 2 e aggiunta sezione Sprint 3
+      Aggiornata sezione Sprint 2 e 3
   - version: "0.2.0"
     date: "2025-12-12"
     authors:
       - Alessandro Mazzariol
     verifier: Valerio Solito
     description: >
-        Modificata sezione riferimenti normativi e aggiunta mitigazione del rischio RT2
-
+      Modificata sezione riferimenti normativi e aggiunta mitigazione del rischio RT2
   - version: "0.1.0"
     date: "2025-12-12"
     authors:
       - Alessandro Mazzariol
     verifier: Valerio Solito
     description: >
-        Aggiunti sezione Glossario e riferimenti normativi/informativi
-
+      Aggiunti sezione Glossario e riferimenti normativi/informativi
   - version: "0.0.2"
     date: "2025-12-03"
     authors:
       - Alessandro Mazzariol
     verifier: Valerio Solito
     description: >
-        Fix di errori ortografici vari
-        
+      Fix errori ortografici
+
   - version: "0.0.1"
     date: "2025-12-03"
     authors:
       - Alessandro Mazzariol
     verifier: Valerio Solito
     description: >
-        Prima stesura del Piano di Progetto
+      Prima stesura del Piano di Progetto
