--- a/docs/12-rtb/verbest/verbest_2026-02-06/verbest_2026-02-06.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-02-06/verbest_2026-02-06.meta.yaml
@@ -1,5 +1,9 @@
 title: Verbale Esterno 2026-02-06 (M31)
 changelog:
+  - version: 1.0.0
+    date: "2026-02-11"
+    approver: Valerio Solito
+    baseline: RTB
   - version: "0.0.1"
     date: "2026-02-06"
     authors:
