docs(verbint): Aggiornati verbint e yaml

--- a/docs/12-rtb/verbint/verbint_2026-01-19/verbint_2026-01-19.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2026-01-19/verbint_2026-01-19.meta.yaml
@@ -1,9 +1,13 @@
-title: Verbale Interno 2025-12-15
+title: Verbale Interno 2026-01-19
 changelog:
+  - version: 1.0.0
+    date: "2026-02-11"
+    approver: Valerio Solito
+    baseline: RTB
   - version: "0.0.1"
     date: "2026-01-20"
     authors:
-      - Alessandro Contarini
-    verifier: TBD
+      - Mario De Pasquale
+    verifier: Valerio Solito
     description: >
       Stesura del verbale
