--- a/docs/12-rtb/verbint/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
@@ -1,8 +1,8 @@
 title: Verbale Interno 2025-11-14
 changelog:
 - version: 1.0.0
-  date: '2025-11-19'
-  approver: Alessandro Contarini
+  date: '2026-02-11'
+  approver: Valerio Solito
   baseline: RTB
 - version: 0.0.1
   date: '2025-11-14'
