--- a/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
@@ -1,8 +1,8 @@
 title: Verbale Interno 2025-12-12
 changelog:
 - version: 1.0.0
-  date: '2025-12-12'
-  approver: Alessandro Mazzariol
+  date: '2026-02-11'
+  approver: Valerio Solito
   baseline: RTB
 - version: 0.0.2
   date: '2025-12-12'
