--- a/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-15/verbint_2025-12-15.meta.yaml
@@ -1,10 +1,14 @@
 title: Verbale Interno 2025-12-15
 changelog:
+  - version: 1.0.0
+    date: "2026-02-11"
+    approver: Valerio Solito
+    baseline: RTB
   - version: "0.1.0"
     date: "2025-12-16"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Stesura in modo più formale, aggiunta di task
   - version: "0.0.1"
