--- a/docs/12-rtb/verbint/verbint_2026-01-06/verbint_2026-01-06.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2026-01-06/verbint_2026-01-06.meta.yaml
@@ -1,5 +1,9 @@
-title: Verbale Interno 2025-12-15
+title: Verbale Interno 2026-01-06
 changelog:
+  - version: 1.0.0
+    date: "2026-02-11"
+    approver: Valerio Solito
+    baseline: RTB
   - version: "0.0.1"
     date: "2026-01-15"
     authors:
