fix(verbint): sistemato modules e dipendenze

--- a/docs/12-rtb/verbint/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
@@ -4,6 +4,13 @@ changelog:
   date: '2026-02-11'
   approver: Valerio Solito
   baseline: RTB
+- version: 0.0.2
+  date: '2025-11-19'
+  authors:
+  - Leonardo Preo
+  verifier: Alessandro Contarini
+  description: |
+    Fix al documento
 - version: 0.0.1
   date: '2025-11-14'
   authors:
