--- a/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-12-12/verbint_2025-12-12.meta.yaml
@@ -4,6 +4,13 @@ changelog:
   date: '2026-02-11'
   approver: Valerio Solito
   baseline: RTB
+- version: 0.0.3
+  date: '2025-12-12'
+  authors: 
+  - Alessandro Mazzariol
+  verifier: Valerio Solito
+  description: |
+    Ulteriori fix
 - version: 0.0.2
   date: '2025-12-12'
   authors:
