--- a/docs/12-rtb/verbint/verbint_2026-02-02/verbint_2026-02-02.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2026-02-02/verbint_2026-02-02.meta.yaml
@@ -1,13 +1,13 @@
-title: Verbale Interno 2026-01-06
+title: Verbale Interno 2026-02-02
 changelog:
   - version: 1.0.0
     date: "2026-02-11"
     approver: Valerio Solito
     baseline: RTB
   - version: "0.0.1"
-    date: "2026-01-15"
+    date: "2026-02-02"
     authors:
-      - Leonardo Preo
+      - Valerio Solito
     verifier: Alessandro Mazzariol
     description: >
       Prima stesura verbale
