--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -117,6 +117,11 @@ accepted_words:
   - TCP
   - Nats
   - TimescaleDB
+  - TypeORM
+  - Goroutines
+  - Hypertables
+  - NoSQL
+  - SDK
   - BRD
   - DevOps
   - ERP
@@ -228,7 +233,7 @@ accepted_words:
   - usr
   - sym
   - QP
-
+  - DataAPI
 
 
   # --- Parole Italiane mancanti / Neologismi ---
