--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -2,18 +2,18 @@
 # Sostituzioni preliminari per correggere caratteri tipografici che confondono Hunspell.
 # Questo dovrebbe risolvere il problema dei falsi positivi su "L'", "dell'", "un'", ecc.
 normalizations:
-  "’": "'"  # Apostrofo tipografico -> Apostrofo ASCII
-  "“": '"'  # Virgolette aperte
-  "”": '"'  # Virgolette chiuse
+  "’": "'" # Apostrofo tipografico -> Apostrofo ASCII
+  "“": '"' # Virgolette aperte
+  "”": '"' # Virgolette chiuse
 
 # 2. PATTERN DA IGNORARE (Regex)
 # Rimuove codici tecnici e sigle numerate prima del controllo.
 ignore_patterns:
-  - '\b(UC|UCS)\d*\b'     # UC/UCS
-  - '\bv\d+\b'            # versioni (v1, v2, ecc.)
+  - '\b(UC|UCS)\d*\b' # UC/UCS
+  - '\bv\d+\b' # versioni (v1, v2, ecc.)
 
 # 3. DIZIONARIO PERSONALIZZATO
-# Parole specifiche da considerare corrette. 
+# Parole specifiche da considerare corrette.
 # -------------------------------------------------------------------------
 # GUIDA ALLA CASE SENSITIVITY (Come aggiungere nuove parole)
 # Hunspell applica regole gerarchiche in base al casing usato in questa lista:
@@ -98,8 +98,6 @@ accepted_words:
   - Nats
   - TimescaleDB
 
-
-
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
   - Acknowledgement
@@ -146,7 +144,6 @@ accepted_words:
   - Serverless
   - WebApp
 
-
   # --- Terminologia Standard Progetto ---
   - docest
   - docint
@@ -154,7 +151,7 @@ accepted_words:
   - verbint
   - EP
   - roadmap
-  - RO    # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
+  - RO # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
   - microservizi
   - onboarding
   - L'Auth
@@ -181,7 +178,7 @@ accepted_words:
   - PasswordInvalida
   - RangeInvalido
   - NessunDato
-
+  - RepoDocumentale
 
   # --- Parole Italiane mancanti / Neologismi ---
   - ciclomatica
