docs(tecnologie): inserimento diagrammi, aggiornamento motivazioni tecnologie

--- a/docs/12-rtb/slides/tecnologie/tecnologie.meta.yaml
+++ b/docs/12-rtb/slides/tecnologie/tecnologie.meta.yaml
@@ -1,5 +1,12 @@
 title: Tecnologie
 changelog:
+  - version: "0.1.0"
+    date: "2024-02-13"
+    authors:
+      - Leonardo Preo
+    verifier: TBD
+    description: >
+      Aggiunta immagini architetture e modifica motivazioni scelte tecnologiche
   - version: "0.0.1"
     date: "2024-02-12"
     authors:
