--- a/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-02-10"
     authors:
       - Alessandro Mazzariol
-    verifier: TBD
+    verifier: Francesco Marcon
     description: >
       Bozza Lettera di presentazione
