bozza lettera di presentazione RTB (#130)
* bozza lettera di presentazione RTB

* fix hunspell

* fix

* fix di piccole frasi e data

* Update verifier name in lettera_presentazione.meta.yaml

---------

Co-authored-by: marcon-effe <framar514@gmail.com>

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -148,7 +148,6 @@ accepted_words:
   - WebApp
   - DdB
 
-
   # --- Terminologia Standard Progetto ---
   - docest
   - docint
@@ -183,6 +182,7 @@ accepted_words:
   - PasswordInvalida
   - RangeInvalido
   - NessunDato
+  - RepoDocumentale
   - uc 
   - authd
   - usr
