doc(tecnologie): aggiunta prometheus e grafana

--- a/docs/12-rtb/slides/tecnologie/tecnologie.meta.yaml
+++ b/docs/12-rtb/slides/tecnologie/tecnologie.meta.yaml
@@ -1,5 +1,12 @@
 title: Tecnologie
 changelog:
+  - version: "0.2.0"
+    date: "2024-02-16"
+    authors:
+      - Leonardo Preo
+    verifier: TBD
+    description: >
+      Aggiunta sezione Prometheus e Grafana
   - version: "0.1.0"
     date: "2024-02-13"
     authors:
